WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270437
[Regression
274311@main
] YouTube.com in safari Airplay connects to ATV receiver, no Video plays but only Audio
https://bugs.webkit.org/show_bug.cgi?id=270437
Summary
[Regression 274311@main] YouTube.com in safari Airplay connects to ATV receiv...
Jean-Yves Avenard [:jya]
Reported
2024-03-04 05:11:34 PST
YouTube.com : YouTube in safari Airplay connects to ATV receiver, no Video plays but only Audio 1. In Safari, open YouTube 2. Play the video content to route to ATV receiver 3. Validate content playback on receiver Results Issue occurrence Step 3 Expected: Validate content playback on endpoint Observed: content fails to play on endpoint - video plays at sender iOS but Audio plays on receiver- video metadata appears on atv, but the actual video is not playing on the atv display.
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2024-03-04 05:11:41 PST
rdar://123467550
Jean-Yves Avenard [:jya]
Comment 2
2024-03-04 05:32:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25406
EWS
Comment 3
2024-03-05 23:59:51 PST
Committed
275730@main
(d9ce6b4272d0): <
https://commits.webkit.org/275730@main
> Reviewed commits have been landed. Closing PR #25406 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug