Source/WebCore/platform/graphics/avfoundation/MediaPlaybackTargetCocoa.h
@@ -30,32 +30,57 @@
 #include "MediaPlaybackTarget.h"
 #include <wtf/RetainPtr.h>
 
+OBJC_CLASS AVOutputContext;
+
 namespace WebCore {
 
-class MediaPlaybackTargetCocoa : public MediaPlaybackTarget {
+class WEBCORE_EXPORT MediaPlaybackTargetContextCocoa final : public MediaPlaybackTargetContext {
 public:
-    WEBCORE_EXPORT static Ref<MediaPlaybackTarget> create(AVOutputContext *);
-    WEBCORE_EXPORT static Ref<MediaPlaybackTarget> create(MediaPlaybackTargetContext&&);
+    explicit MediaPlaybackTargetContextCocoa(RetainPtr<AVOutputContext>&&);
+    ~MediaPlaybackTargetContextCocoa();
+
+    RetainPtr<AVOutputContext> outputContext() const;
+private:
+    String deviceName() const final;
+    bool hasActiveRoute() const final;
+    bool supportsRemoteVideoPlayback() const final;
+
+    RetainPtr<AVOutputContext> m_outputContext;
+};
+
+class MediaPlaybackTargetCocoa final : public MediaPlaybackTarget {
+public:
+    WEBCORE_EXPORT static Ref<MediaPlaybackTarget> create(MediaPlaybackTargetContextCocoa&&);
 
 #if PLATFORM(IOS_FAMILY) && !PLATFORM(IOS_FAMILY_SIMULATOR) && !PLATFORM(MACCATALYST)
-    static Ref<MediaPlaybackTarget> create();
+    WEBCORE_EXPORT static Ref<MediaPlaybackTargetCocoa> create();
 #endif
-
-    virtual ~MediaPlaybackTargetCocoa();
 
     TargetType targetType() const final { return TargetType::AVFoundation; }
     const MediaPlaybackTargetContext& targetContext() const final { return m_context; }
 
-protected:
-    explicit MediaPlaybackTargetCocoa(AVOutputContext *);
-    explicit MediaPlaybackTargetCocoa(MediaPlaybackTargetContext&&);
+    AVOutputContext* outputContext() { return m_context.outputContext().get(); }
 
-    MediaPlaybackTargetContext m_context;
+private:
+    explicit MediaPlaybackTargetCocoa(MediaPlaybackTargetContextCocoa&&);
+
+    MediaPlaybackTargetContextCocoa m_context;
 };
 
-MediaPlaybackTargetCocoa* toMediaPlaybackTargetCocoa(MediaPlaybackTarget*);
-const MediaPlaybackTargetCocoa* toMediaPlaybackTargetCocoa(const MediaPlaybackTarget*);
+} // namespace WebCore
 
+SPECIALIZE_TYPE_TRAITS_BEGIN(WebCore::MediaPlaybackTargetContextCocoa)
+static bool isType(const WebCore::MediaPlaybackTargetContext& context)
+{
+    return context.type() ==  WebCore::MediaPlaybackTargetContextType::AVOutputContext;
 }
+SPECIALIZE_TYPE_TRAITS_END()
+
+SPECIALIZE_TYPE_TRAITS_BEGIN(WebCore::MediaPlaybackTargetCocoa)
+static bool isType(const WebCore::MediaPlaybackTarget& target)
+{
+    return target.targetType() ==  WebCore::MediaPlaybackTarget::TargetType::AVFoundation;
+}
+SPECIALIZE_TYPE_TRAITS_END()
 
 #endif // ENABLE(WIRELESS_PLAYBACK_TARGET)
