Source/WebCore/platform/graphics/cocoa/VideoMediaSampleRenderer.h
@@ -33,6 +33,7 @@
 
 OBJC_CLASS AVSampleBufferDisplayLayer;
 OBJC_PROTOCOL(WebSampleBufferVideoRendering);
+typedef struct opaqueCMSampleBuffer *CMSampleBufferRef;
 
 namespace WebCore {
 
